Closed Bug 1644258 Opened 5 years ago Closed 5 years ago

Perma Android 8.0 /data/local/tests/tests/tests/tests/gc/bug-1531626.js:37:11 Error: Assertion failed: got 262144, expected 258048

Categories

(Core :: JavaScript Engine, defect, P5)

defect

Tracking

()

RESOLVED FIXED
mozilla79
Tracking Status
firefox-esr68 --- unaffected
firefox77 --- unaffected
firefox78 --- unaffected
firefox79 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: jonco)

References

(Regression)

Details

(Keywords: assertion, intermittent-failure, regression)

Attachments

(1 file)

Filed by: dluca [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=305501724&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/e7tnsn-VQJiRHIN4hfHHgg/runs/0/artifacts/public/logs/live_backing.log


INFO -  TEST-PASS | tests/jit-test/jit-test/tests/gc/bug-1531018.js | Success (code 0, args "--blinterp-eager") [0.3 s]
[task 2020-06-08T19:16:22.065Z] 19:16:21     INFO -  /data/local/tests/tests/tests/tests/gc/bug-1531626.js:37:11 Error: Assertion failed: got 262144, expected 258048
[task 2020-06-08T19:16:22.065Z] 19:16:21     INFO -  Stack:
[task 2020-06-08T19:16:22.065Z] 19:16:21     INFO -    @/data/local/tests/tests/tests/tests/gc/bug-1531626.js:16:19/data/local/tests/tests/tests/tests/gc/bug-1531626.js:37:11 Error: Assertion failed: got 262144, expected 258048
[task 2020-06-08T19:16:22.065Z] 19:16:21     INFO -  Stack:
[task 2020-06-08T19:16:22.065Z] 19:16:21     INFO -    @/data/local/tests/tests/tests/tests/gc/bug-1531626.js:16:19Exit code: 3
[task 2020-06-08T19:16:22.065Z] 19:16:21     INFO -  FAIL - gc/bug-1531626.js
[task 2020-06-08T19:16:22.065Z] 19:16:21  WARNING -  TEST-UNEXPECTED-FAIL | tests/jit-test/jit-test/tests/gc/bug-1531626.js | /data/local/tests/tests/tests/tests/gc/bug-1531626.js:37:11 Error: Assertion failed: got 262144, expected 258048 (code 3, args "") [0.3 s]
[task 2020-06-08T19:16:22.065Z] 19:16:21     INFO -  INFO exit-status     : 3
[task 2020-06-08T19:16:22.065Z] 19:16:21     INFO -  INFO timed-out       : False
[task 2020-06-08T19:16:22.065Z] 19:16:21     INFO -  INFO stdout          > /data/local/tests/tests/tests/tests/gc/bug-1531626.js:37:11 Error: Assertion failed: got 262144, expected 258048
[task 2020-06-08T19:16:22.065Z] 19:16:21     INFO -  INFO stdout          > Stack:
[task 2020-06-08T19:16:22.065Z] 19:16:21     INFO -  INFO stdout          > @/data/local/tests/tests/tests/tests/gc/bug-1531626.js:16:19
[task 2020-06-08T19:16:22.065Z] 19:16:21     INFO -  INFO stderr         2> /data/local/tests/tests/tests/tests/gc/bug-1531626.js:37:11 Error: Assertion failed: got 262144, expected 258048
[task 2020-06-08T19:16:22.065Z] 19:16:21     INFO -  INFO stderr         2> Stack:
[task 2020-06-08T19:16:22.065Z] 19:16:21     INFO -  INFO stderr         2> @/data/local/tests/tests/tests/tests/gc/bug-1531626.js:16:19
[task 2020-06-08T19:16:22.065Z] 19:16:22     INFO -  /data/local/tests/tests/tests/tests/gc/bug-1531626.js:37:11 Error: Assertion failed: got 262144, expected 258048
[task 2020-06-08T19:16:22.065Z] 19:16:22     INFO -  Stack:
[task 2020-06-08T19:16:22.065Z] 19:16:22     INFO -    @/data/local/tests/tests/tests/tests/gc/bug-1531626.js:16:19/data/local/tests/tests/tests/tests/gc/bug-1531626.js:37:11 Error: Assertion failed: got 262144, expected 258048
[task 2020-06-08T19:16:22.065Z] 19:16:22     INFO -  Stack:
[task 2020-06-08T19:16:22.065Z] 19:16:22     INFO -    @/data/local/tests/tests/tests/tests/gc/bug-1531626.js:16:19Exit code: 3
[task 2020-06-08T19:16:22.065Z] 19:16:22     INFO -  FAIL - gc/bug-1531626.js
[task 2020-06-08T19:16:22.065Z] 19:16:22  WARNING -  TEST-UNEXPECTED-FAIL | tests/jit-test/jit-test/tests/gc/bug-1531626.js | /data/local/tests/tests/tests/tests/gc/bug-1531626.js:37:11 Error: Assertion failed: got 262144, expected 258048 (code 3, args "--ion-eager --ion-offthread-compile=off --more-compartments") [0.3 s]
[task 2020-06-08T19:16:22.065Z] 19:16:22     INFO -  INFO exit-status     : 3
[task 2020-06-08T19:16:22.065Z] 19:16:22     INFO -  INFO timed-out       : False
[task 2020-06-08T19:16:22.065Z] 19:16:22     INFO -  INFO stdout          > /data/local/tests/tests/tests/tests/gc/bug-1531626.js:37:11 Error: Assertion failed: got 262144, expected 258048
[task 2020-06-08T19:16:22.065Z] 19:16:22     INFO -  INFO stdout          > Stack:
[task 2020-06-08T19:16:22.065Z] 19:16:22     INFO -  INFO stdout          > @/data/local/tests/tests/tests/tests/gc/bug-1531626.js:16:19
[task 2020-06-08T19:16:22.065Z] 19:16:22     INFO -  INFO stderr         2> /data/local/tests/tests/tests/tests/gc/bug-1531626.js:37:11 Error: Assertion failed: got 262144, expected 258048
[task 2020-06-08T19:16:22.065Z] 19:16:22     INFO -  INFO stderr         2> Stack:
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  INFO stderr         2> @/data/local/tests/tests/tests/tests/gc/bug-1531626.js:16:19
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  /data/local/tests/tests/tests/tests/gc/bug-1531626.js:37:11 Error: Assertion failed: got 262144, expected 258048
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  Stack:
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -    @/data/local/tests/tests/tests/tests/gc/bug-1531626.js:16:19/data/local/tests/tests/tests/tests/gc/bug-1531626.js:37:11 Error: Assertion failed: got 262144, expected 258048
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  Stack:
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -    @/data/local/tests/tests/tests/tests/gc/bug-1531626.js:16:19Exit code: 3
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  FAIL - gc/bug-1531626.js
[task 2020-06-08T19:16:34.592Z] 19:16:22  WARNING -  TEST-UNEXPECTED-FAIL | tests/jit-test/jit-test/tests/gc/bug-1531626.js | /data/local/tests/tests/tests/tests/gc/bug-1531626.js:37:11 Error: Assertion failed: got 262144, expected 258048 (code 3, args "--ion-eager --ion-offthread-compile=off --ion-check-range-analysis --ion-extra-checks --no-sse3 --no-threads") [0.3 s]
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  INFO exit-status     : 3
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  INFO timed-out       : False
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  INFO stdout          > /data/local/tests/tests/tests/tests/gc/bug-1531626.js:37:11 Error: Assertion failed: got 262144, expected 258048
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  INFO stdout          > Stack:
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  INFO stdout          > @/data/local/tests/tests/tests/tests/gc/bug-1531626.js:16:19
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  INFO stderr         2> /data/local/tests/tests/tests/tests/gc/bug-1531626.js:37:11 Error: Assertion failed: got 262144, expected 258048
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  INFO stderr         2> Stack:
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  INFO stderr         2> @/data/local/tests/tests/tests/tests/gc/bug-1531626.js:16:19
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  /data/local/tests/tests/tests/tests/gc/bug-1531626.js:37:11 Error: Assertion failed: got 262144, expected 258048
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  Stack:
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -    @/data/local/tests/tests/tests/tests/gc/bug-1531626.js:16:19/data/local/tests/tests/tests/tests/gc/bug-1531626.js:37:11 Error: Assertion failed: got 262144, expected 258048
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  Stack:
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -    @/data/local/tests/tests/tests/tests/gc/bug-1531626.js:16:19Exit code: 3
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  FAIL - gc/bug-1531626.js
[task 2020-06-08T19:16:34.592Z] 19:16:22  WARNING -  TEST-UNEXPECTED-FAIL | tests/jit-test/jit-test/tests/gc/bug-1531626.js | /data/local/tests/tests/tests/tests/gc/bug-1531626.js:37:11 Error: Assertion failed: got 262144, expected 258048 (code 3, args "--baseline-eager") [0.3 s]
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  INFO exit-status     : 3
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  INFO timed-out       : False
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  INFO stdout          > /data/local/tests/tests/tests/tests/gc/bug-1531626.js:37:11 Error: Assertion failed: got 262144, expected 258048
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  INFO stdout          > Stack:
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  INFO stdout          > @/data/local/tests/tests/tests/tests/gc/bug-1531626.js:16:19
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  INFO stderr         2> /data/local/tests/tests/tests/tests/gc/bug-1531626.js:37:11 Error: Assertion failed: got 262144, expected 258048
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  INFO stderr         2> Stack:
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  INFO stderr         2> @/data/local/tests/tests/tests/tests/gc/bug-1531626.js:16:19
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  /data/local/tests/tests/tests/tests/gc/bug-1531626.js:37:11 Error: Assertion failed: got 262144, expected 258048
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  Stack:
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -    @/data/local/tests/tests/tests/tests/gc/bug-1531626.js:16:19/data/local/tests/tests/tests/tests/gc/bug-1531626.js:37:11 Error: Assertion failed: got 262144, expected 258048
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  Stack:
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -    @/data/local/tests/tests/tests/tests/gc/bug-1531626.js:16:19Exit code: 3
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  FAIL - gc/bug-1531626.js
[task 2020-06-08T19:16:34.592Z] 19:16:22  WARNING -  TEST-UNEXPECTED-FAIL | tests/jit-test/jit-test/tests/gc/bug-1531626.js | /data/local/tests/tests/tests/tests/gc/bug-1531626.js:37:11 Error: Assertion failed: got 262144, expected 258048 (code 3, args "--no-blinterp --no-baseline --no-ion --more-compartments") [0.3 s]
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  INFO exit-status     : 3
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  INFO timed-out       : False
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  INFO stdout          > /data/local/tests/tests/tests/tests/gc/bug-1531626.js:37:11 Error: Assertion failed: got 262144, expected 258048
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  INFO stdout          > Stack:
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  INFO stdout          > @/data/local/tests/tests/tests/tests/gc/bug-1531626.js:16:19
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  INFO stderr         2> /data/local/tests/tests/tests/tests/gc/bug-1531626.js:37:11 Error: Assertion failed: got 262144, expected 258048
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  INFO stderr         2> Stack:
[task 2020-06-08T19:16:34.592Z] 19:16:22     INFO -  INFO stderr         2> @/data/local/tests/tests/tests/tests/gc/bug-1531626.js:16:19
[task 2020-06-08T19:16:34.592Z] 19:16:23     INFO -  /data/local/tests/tests/tests/tests/gc/bug-1531626.js:37:11 Error: Assertion failed: got 262144, expected 258048
[task 2020-06-08T19:16:34.592Z] 19:16:23     INFO -  Stack:
[task 2020-06-08T19:16:34.592Z] 19:16:23     INFO -    @/data/local/tests/tests/tests/tests/gc/bug-1531626.js:16:19/data/local/tests/tests/tests/tests/gc/bug-1531626.js:37:11 Error: Assertion failed: got 262144, expected 258048
[task 2020-06-08T19:16:34.592Z] 19:16:23     INFO -  Stack:
[task 2020-06-08T19:16:34.592Z] 19:16:23     INFO -    @/data/local/tests/tests/tests/tests/gc/bug-1531626.js:16:19Exit code: 3
[task 2020-06-08T19:16:34.592Z] 19:16:23     INFO -  FAIL - gc/bug-1531626.js
[task 2020-06-08T19:16:34.592Z] 19:16:23  WARNING -  TEST-UNEXPECTED-FAIL | tests/jit-test/jit-test/tests/gc/bug-1531626.js | /data/local/tests/tests/tests/tests/gc/bug-1531626.js:37:11 Error: Assertion failed: got 262144, expected 258048 (code 3, args "--blinterp-eager") [0.3 s]
[task 2020-06-08T19:16:34.593Z] 19:16:23     INFO -  INFO exit-status     : 3
[task 2020-06-08T19:16:34.593Z] 19:16:23     INFO -  INFO timed-out       : False
[task 2020-06-08T19:16:34.593Z] 19:16:23     INFO -  INFO stdout          > /data/local/tests/tests/tests/tests/gc/bug-1531626.js:37:11 Error: Assertion failed: got 262144, expected 258048
[task 2020-06-08T19:16:34.593Z] 19:16:23     INFO -  INFO stdout          > Stack:
[task 2020-06-08T19:16:34.593Z] 19:16:23     INFO -  INFO stdout          > @/data/local/tests/tests/tests/tests/gc/bug-1531626.js:16:19
[task 2020-06-08T19:16:34.593Z] 19:16:23     INFO -  INFO stderr         2> /data/local/tests/tests/tests/tests/gc/bug-1531626.js:37:11 Error: Assertion failed: got 262144, expected 258048
[task 2020-06-08T19:16:34.593Z] 19:16:23     INFO -  INFO stderr         2> Stack:
[task 2020-06-08T19:16:34.593Z] 19:16:23     INFO -  INFO stderr         2> @/data/local/tests/tests/tests/tests/gc/bug-1531626.js:16:19
[task 2020-06-08T19:16:34.593Z] 19:16:24     INFO -  TEST-PASS | tests/jit-test/jit-test/tests/gc/bug-1532376.js | Success (code 0, args "") [0.9 s]

Jon, could you please take a look at this bug?

Flags: needinfo?(jcoppeard)
Assignee: nobody → jcoppeard
Flags: needinfo?(jcoppeard)

Set release status flags based on info from the regressing bug 1643650

Some debugging output from the test:

[task 2020-06-09T14:36:48.089Z] 14:36:48     INFO -  INFO stdout          > Test start
[task 2020-06-09T14:36:48.089Z] 14:36:48     INFO -  INFO stdout          > setMinMax 128 1024
[task 2020-06-09T14:36:48.089Z] 14:36:48     INFO -  INFO stdout          > result 128 1024
[task 2020-06-09T14:36:48.089Z] 14:36:48     INFO -  INFO stdout          > expect 128 1024
[task 2020-06-09T14:36:48.089Z] 14:36:48     INFO -  INFO stdout          > setMinMax 129 1024
[task 2020-06-09T14:36:48.089Z] 14:36:48     INFO -  INFO stdout          > result 128 1024
[task 2020-06-09T14:36:48.089Z] 14:36:48     INFO -  INFO stdout          > expect 128 1024
[task 2020-06-09T14:36:48.089Z] 14:36:48     INFO -  INFO stdout          > setMinMax 255 1024
[task 2020-06-09T14:36:48.089Z] 14:36:48     INFO -  INFO stdout          > result 252 1024
[task 2020-06-09T14:36:48.089Z] 14:36:48     INFO -  INFO stdout          > expect 256 1024
[task 2020-06-09T14:36:48.089Z] 14:36:48     INFO -  INFO stdout          > /data/local/tests/tests/tests/tests/gc/bug-1531626.js:46:11 Error: Assertion failed: got 258048, expected 262144
Summary: Intermittent /data/local/tests/tests/tests/tests/gc/bug-1531626.js:37:11 Error: Assertion failed: got 262144, expected 258048 → Perma Android 8.0 /data/local/tests/tests/tests/tests/gc/bug-1531626.js:37:11 Error: Assertion failed: got 262144, expected 258048

Previously there was a quirk of nursery size rounding where requesting a nursery size of just less than a chunk resulted in a smaller size than a chunk being used even if one chunk was the nearest valid size.

This was to avoid having a sub-chunk size greater than the amount of usable space in a chunk, but that is not possible anyway as long as the sub-chunk step is greater than the chunk trailer size.

The patch simplifies the rounding code and updates the test code to add a size that will give different results depending on chunk size. I had to add a gcparam to get the chunk size to make this work.

Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla79
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: